Add about, support, exit in MenuBar

--- a/src/qml.qrc
+++ b/src/qml.qrc
@@ -100,5 +100,6 @@
         <file>assets/fonts/DINPro/DINPro-Light.otf</file>
         <file>dialogs/SendDialog.qml</file>
         <file>dialogs/ReceiveDialog.qml</file>
+        <file>dialogs/AboutDialog.qml</file>
     </qresource>
 </RCC>
