Add mnemonic editor to recover view

--- a/src/qml.qrc
+++ b/src/qml.qrc
@@ -43,5 +43,6 @@
         <file>dialogs/SendDialog.qml</file>
         <file>dialogs/ReceiveDialog.qml</file>
         <file>dialogs/AboutDialog.qml</file>
+        <file>views/MnemonicEditor.qml</file>
     </qresource>
 </RCC>
