--- a/src/qml.qrc
+++ b/src/qml.qrc
@@ -36,7 +36,7 @@
         <file>views/TransactionListView.qml</file>
         <file>views/WalletsSidebarItem.qml</file>
         <file>dialogs/WalletSettingsDialog.qml</file>
-        <file>views/onboarding/OnboardingPage.qml</file>
+        <file>views/WizardPage.qml</file>
         <file>views/onboarding/ServiceTermsPage.qml</file>
         <file>views/onboarding/WelcomePage.qml</file>
         <file>loader.qml</file>
