Factor out network selection page

--- a/src/qml.qrc
+++ b/src/qml.qrc
@@ -44,5 +44,6 @@
         <file>dialogs/ReceiveDialog.qml</file>
         <file>dialogs/AboutDialog.qml</file>
         <file>views/MnemonicEditor.qml</file>
+        <file>views/NetworkPage.qml</file>
     </qresource>
 </RCC>
