fixup push action

--- a/src/qml.qrc
+++ b/src/qml.qrc
@@ -46,5 +46,6 @@
         <file>views/MnemonicEditor.qml</file>
         <file>views/NetworkPage.qml</file>
         <file>views/MnemonicWordComboBox.qml</file>
+        <file>StackViewPushAction.qml</file>
     </qresource>
 </RCC>
