--- a/src/qml.qrc
+++ b/src/qml.qrc
@@ -47,5 +47,6 @@
         <file>views/NetworkPage.qml</file>
         <file>views/MnemonicWordComboBox.qml</file>
         <file>StackViewPushAction.qml</file>
+        <file>ConnectView.qml</file>
     </qresource>
 </RCC>
