--- a/src/qml.qrc
+++ b/src/qml.qrc
@@ -50,5 +50,6 @@
         <file>ConnectView.qml</file>
         <file>FeeComboBox.qml</file>
         <file>ScannerView.qml</file>
+        <file>ControllerDialog.qml</file>
     </qresource>
 </RCC>
