Add and use ChangePinDialog

--- a/src/qml.qrc
+++ b/src/qml.qrc
@@ -58,5 +58,6 @@
         <file>TwoFactorEnableDialog.qml</file>
         <file>TwoFactorDisableDialog.qml</file>
         <file>ControllerResult.qml</file>
+        <file>dialogs/ChangePinDialog.qml</file>
     </qresource>
 </RCC>
