Show liquid asset balance details

--- a/src/qml.qrc
+++ b/src/qml.qrc
@@ -65,5 +65,6 @@
         <file>AssetDelegate.qml</file>
         <file>AssetListView.qml</file>
         <file>BalanceItem.qml</file>
+        <file>AssetView.qml</file>
     </qresource>
 </RCC>
