Add top shadown to lists

--- a/src/qml.qrc
+++ b/src/qml.qrc
@@ -68,5 +68,6 @@
         <file>AssetView.qml</file>
         <file>AccountListView.qml</file>
         <file>AssetIcon.qml</file>
+        <file>ScrollShadow.qml</file>
     </qresource>
 </RCC>
