--- a/src/qml.qrc
+++ b/src/qml.qrc
@@ -38,9 +38,9 @@
         <file>dialogs/SendDialog.qml</file>
         <file>dialogs/ReceiveDialog.qml</file>
         <file>dialogs/AboutDialog.qml</file>
-        <file>views/MnemonicEditor.qml</file>
+        <file>MnemonicEditor.qml</file>
         <file>views/NetworkPage.qml</file>
-        <file>views/MnemonicWordComboBox.qml</file>
+        <file>WordField.qml</file>
         <file>StackViewPushAction.qml</file>
         <file>ConnectView.qml</file>
         <file>FeeComboBox.qml</file>
