Allow to set email for recovery
Co-authored-by: Domenico Gabriele <domenico@blockstream.com>

--- a/src/qml.qrc
+++ b/src/qml.qrc
@@ -73,5 +73,6 @@
         <file>RequestTwoFactorResetDialog.qml</file>
         <file>CancelTwoFactorResetDialog.qml</file>
         <file>WalletDialog.qml</file>
+        <file>SetRecoveryEmailDialog.qml</file>
     </qresource>
 </RCC>
