Add button to paste address in send view

--- a/assets/assets.qrc
+++ b/assets/assets.qrc
@@ -43,6 +43,7 @@
         <file>svg/onboarding_noonline.svg</file>
         <file>svg/onboarding_noscrshot.svg</file>
         <file>svg/onboarding_write.svg</file>
+        <file>svg/paste.svg</file>
         <file>svg/qr_bg.svg</file>
         <file>svg/qr_sweep.svg</file>
         <file>svg/qr.svg</file>
