--- a/qml/qml.qrc
+++ b/qml/qml.qrc
@@ -73,5 +73,6 @@
         <file>AbstractDialog.qml</file>
         <file>NLockTimeDialog.qml</file>
         <file>CopyableLabel.qml</file>
+        <file>DeviceImage.qml</file>
     </qresource>
 </RCC>
