--- a/qml/qml.qrc
+++ b/qml/qml.qrc
@@ -24,7 +24,6 @@
         <file>RenameAccountDialog.qml</file>
         <file>PinView.qml</file>
         <file>TransactionListView.qml</file>
-        <file>WalletSettingsView.qml</file>
         <file>WizardPage.qml</file>
         <file>WelcomePage.qml</file>
         <file>SendDialog.qml</file>
@@ -83,5 +82,6 @@
         <file>SideButton.qml</file>
         <file>HomeView.qml</file>
         <file>LoginDialog.qml</file>
+        <file>WalletSettingsDialog.qml</file>
     </qresource>
 </RCC>
