--- a/qml/qml.qrc
+++ b/qml/qml.qrc
@@ -16,6 +16,7 @@
         <file>DebugActiveFocus.qml</file>
         <file>WalletContainerView.qml</file>
         <file>Intro.qml</file>
+        <file>JadeView.qml</file>
         <file>MainMenuBar.qml</file>
         <file>RestoreWallet.qml</file>
         <file>DeviceView.qml</file>
