Move MainPage Section to dedicated file

--- a/qml/qml.qrc
+++ b/qml/qml.qrc
@@ -83,5 +83,6 @@
         <file>WalletSettingsDialog.qml</file>
         <file>MainPageHeader.qml</file>
         <file>LedgerView.qml</file>
+        <file>MainPageSection.qml</file>
     </qresource>
 </RCC>
