Update app settings button and label

--- a/assets/svg.qrc
+++ b/assets/svg.qrc
@@ -16,5 +16,6 @@
         <file>svg/grid.svg</file>
         <file>svg/logout.svg</file>
         <file>svg/preferences.svg</file>
+        <file>svg/appsettings.svg</file>
     </qresource>
 </RCC>
