--- a/qml/qml.qrc
+++ b/qml/qml.qrc
@@ -83,5 +83,6 @@
         <file>LedgerView.qml</file>
         <file>MainPageSection.qml</file>
         <file>DialogFooter.qml</file>
+        <file>HSpacer.qml</file>
     </qresource>
 </RCC>
