--- a/qml/qml.qrc
+++ b/qml/qml.qrc
@@ -91,5 +91,6 @@
         <file>SessionTorCircuitToolButton.qml</file>
         <file>DialogHeader.qml</file>
         <file>DialogLoader.qml</file>
+        <file>ChooseNetworkDialog.qml</file>
     </qresource>
 </RCC>
