Add certificate for jade firmware service

--- a/assets/assets.qrc
+++ b/assets/assets.qrc
@@ -64,5 +64,6 @@
         <file>fonts/Roboto/Roboto-Regular.ttf</file>
         <file>fonts/Roboto/Roboto-Thin.ttf</file>
         <file>fonts/Roboto/Roboto-ThinItalic.ttf</file>
+        <file>jade_services_certificate.pem</file>
     </qresource>
 </RCC>
