--- a/qml/qml.qrc
+++ b/qml/qml.qrc
@@ -84,5 +84,6 @@
         <file>MainPageSection.qml</file>
         <file>DialogFooter.qml</file>
         <file>HSpacer.qml</file>
+        <file>BlinkAnimation.qml</file>
     </qresource>
 </RCC>
