Add DialogLoader to fix hover issues

--- a/qml/qml.qrc
+++ b/qml/qml.qrc
@@ -90,5 +90,6 @@
         <file>BlinkAnimation.qml</file>
         <file>SessionTorCircuitToolButton.qml</file>
         <file>DialogHeader.qml</file>
+        <file>DialogLoader.qml</file>
     </qresource>
 </RCC>
