Add GButton component

--- a/qml/qml.qrc
+++ b/qml/qml.qrc
@@ -92,5 +92,6 @@
         <file>DialogHeader.qml</file>
         <file>DialogLoader.qml</file>
         <file>ChooseNetworkDialog.qml</file>
+        <file>GButton.qml</file>
     </qresource>
 </RCC>
