Use spacers components throughout

--- a/qml/qml.qrc
+++ b/qml/qml.qrc
@@ -93,5 +93,6 @@
         <file>DialogLoader.qml</file>
         <file>ChooseNetworkDialog.qml</file>
         <file>GButton.qml</file>
+        <file>Spacer.qml</file>
     </qresource>
 </RCC>
