--- a/assets/svg.qrc
+++ b/assets/svg.qrc
@@ -21,5 +21,6 @@
         <file>svg/gearFill.svg</file>
         <file>svg/torV2.svg</file>
         <file>svg/proxyV2.svg</file>
+        <file>svg/amp.svg</file>
     </qresource>
 </RCC>
