--- a/qml/qml.qrc
+++ b/qml/qml.qrc
@@ -93,5 +93,6 @@
         <file>GButton.qml</file>
         <file>Spacer.qml</file>
         <file>EditableLabel.qml</file>
+        <file>AnimLoader.qml</file>
     </qresource>
 </RCC>
