--- a/qml/qml.qrc
+++ b/qml/qml.qrc
@@ -93,6 +93,7 @@
         <file>GButton.qml</file>
         <file>Spacer.qml</file>
         <file>EditableLabel.qml</file>
+        <file>MnemonicQuizView.qml</file>
         <file>AnimLoader.qml</file>
     </qresource>
 </RCC>
