Add network selection view

--- a/qml/qml.qrc
+++ b/qml/qml.qrc
@@ -94,6 +94,7 @@
         <file>Spacer.qml</file>
         <file>EditableLabel.qml</file>
         <file>MnemonicQuizView.qml</file>
+        <file>SelectNetworkView.qml</file>
         <file>AnimLoader.qml</file>
     </qresource>
 </RCC>
