Add AMP onboarding and refactor signup and restore dialogs

--- a/assets/assets.qrc
+++ b/assets/assets.qrc
@@ -65,5 +65,7 @@
         <file>fonts/Roboto/Roboto-Thin.ttf</file>
         <file>fonts/Roboto/Roboto-ThinItalic.ttf</file>
         <file>jade_services_certificate.pem</file>
+        <file>png/amp_background.png</file>
+        <file>png/liquid_background.png</file>
     </qresource>
 </RCC>
