Support temporary watch only login

--- a/qml/qml.qrc
+++ b/qml/qml.qrc
@@ -105,5 +105,6 @@
         <file>OutputDelegate.qml</file>
         <file>Tag.qml</file>
         <file>SetUnspentOutputsStatusDialog.qml</file>
+        <file>WatchOnlyLoginDialog.qml</file>
     </qresource>
 </RCC>
