Created generic TransactionDoneView. Use TransactionDoneView in SendDialog and BumpFeeDialog.

--- a/qml/qml.qrc
+++ b/qml/qml.qrc
@@ -106,5 +106,6 @@
         <file>Tag.qml</file>
         <file>SetUnspentOutputsStatusDialog.qml</file>
         <file>WatchOnlyLoginDialog.qml</file>
+        <file>TransactionDoneView.qml</file>
     </qresource>
 </RCC>
