--- a/assets/svg.qrc
+++ b/assets/svg.qrc
@@ -29,5 +29,6 @@
         <file>svg/search.svg</file>
         <file>svg/coins.svg</file>
         <file>svg/info.svg</file>
+        <file>svg/export.svg</file>
     </qresource>
 </RCC>
