Take focus out of transactions search field when clicking outside of it

--- a/qml/qml.qrc
+++ b/qml/qml.qrc
@@ -110,5 +110,6 @@
         <file>GListView.qml</file>
         <file>GPane.qml</file>
         <file>GSearchField.qml</file>
+        <file>GHeader.qml</file>
     </qresource>
 </RCC>
