--- a/assets/svg.qrc
+++ b/assets/svg.qrc
@@ -32,5 +32,6 @@
         <file>svg/sidebar.svg</file>
         <file>svg/export.svg</file>
         <file>svg/x.svg</file>
+        <file>svg/2fa_general.svg</file>
     </qresource>
 </RCC>
