Fix system message dialog for long messages

--- a/qml/qml.qrc
+++ b/qml/qml.qrc
@@ -111,5 +111,6 @@
         <file>GPane.qml</file>
         <file>GSearchField.qml</file>
         <file>GHeader.qml</file>
+        <file>GFlickable.qml</file>
     </qresource>
 </RCC>
