Force minimum ledger versions

--- a/qml/qml.qrc
+++ b/qml/qml.qrc
@@ -112,5 +112,6 @@
         <file>GHeader.qml</file>
         <file>GFlickable.qml</file>
         <file>Wallet2faSettingsView.qml</file>
+        <file>LedgerLoginDialog.qml</file>
     </qresource>
 </RCC>
