Support singlesig wallet in testnet

--- a/qml/qml.qrc
+++ b/qml/qml.qrc
@@ -114,5 +114,6 @@
         <file>Wallet2faSettingsView.qml</file>
         <file>LedgerLoginDialog.qml</file>
         <file>SelectServerTypeView.qml</file>
+        <file>TorUnavailableWithElectrumWarning.qml</file>
     </qresource>
 </RCC>
