Add custom text area component

--- a/qml/qml.qrc
+++ b/qml/qml.qrc
@@ -117,5 +117,6 @@
         <file>TorUnavailableWithElectrumWarning.qml</file>
         <file>GTextField.qml</file>
         <file>AmountValidator.qml</file>
+        <file>GTextArea.qml</file>
     </qresource>
 </RCC>
