Support manual coin selection in bitcoin networks

--- a/qml/qml.qrc
+++ b/qml/qml.qrc
@@ -120,5 +120,7 @@
         <file>GTextArea.qml</file>
         <file>GComboBox.qml</file>
         <file>GSwitch.qml</file>
+        <file>CoinDelegate.qml</file>
+        <file>SelectCoinsView.qml</file>
     </qresource>
 </RCC>
