--- a/assets/svg.qrc
+++ b/assets/svg.qrc
@@ -40,5 +40,6 @@
         <file>svg/testnet-liquid.svg</file>
         <file>svg/external_link.svg</file>
         <file>svg/arrow_left.svg</file>
+        <file>svg/2fa_telegram.svg</file>
     </qresource>
 </RCC>
