Warning on receive screen for Nano S on Liquid

--- a/assets/svg.qrc
+++ b/assets/svg.qrc
@@ -36,5 +36,6 @@
         <file>svg/singleSig.svg</file>
         <file>svg/key.svg</file>
         <file>svg/multi-sig.svg</file>
+        <file>svg/warning.svg</file>
     </qresource>
 </RCC>
