--- a/assets/svg.qrc
+++ b/assets/svg.qrc
@@ -37,5 +37,6 @@
         <file>svg/key.svg</file>
         <file>svg/multi-sig.svg</file>
         <file>svg/warning.svg</file>
+        <file>svg/testnet-liquid.svg</file>
     </qresource>
 </RCC>
